[gd_scene load_steps=9 format=3 uid="uid://bg5dajfqwmca2"]

[ext_resource type="Script" uid="uid://cm13yel3rcdqm" path="res://Script/Models/Sudoku/SudokuCell.gd" id="1_g4pu0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s8ul"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm4hn"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4pu0"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 1, 0.6039216)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ense"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0, 0, 0.6039216)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfswe"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 1, 0, 0.6039216)
corner_detail = 1

[sub_resource type="LabelSettings" id="LabelSettings_g4pu0"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4pu0"]
size = Vector2(36, 36)

[node name="SudokuCell" type="Node2D" groups=["SudokuCell"]]
script = ExtResource("1_g4pu0")

[node name="Panel" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1s8ul")

[node name="pnSelected" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bm4hn")

[node name="pnHover" type="Panel" parent="."]
visible = false
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 38.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g4pu0")

[node name="pnSameLineHover" type="Panel" parent="."]
visible = false
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 38.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ense")

[node name="pnSameQuadrantHover" type="Panel" parent="."]
visible = false
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 38.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rfswe")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 40.0
label_settings = SubResource("LabelSettings_g4pu0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_g4pu0")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
